<resources>
    <string name="app_name">Story App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="livestory_app">LiveStory App</string>
    <string name="by_keecoding">by KeeCoding</string>
    <string name="sign_in">Sign In</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="example_email_com">example@email.com</string>
    <string name="password">Password</string>
    <string name="don_t_have_account">Didn\'t have account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="favorites">Favorites</string>
    <string name="more">More</string>
    <string name="home_page">Home Page</string>
    <string name="story">Story</string>
    <string name="email_is_invalid">Email is Invalid</string>
    <string name="name_is_empty">Name is Empty</string>
    <string name="your_name">Your name</string>
    <string name="name">Name</string>
    <string name="already_have_account">Already have account?</string>
    <string name="add_story">Add Story</string>
    <string name="back">Back</string>
    <string name="exit">Exit</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="upload">Upload</string>
    <string name="your_description_here">Your description here…</string>
    <string name="delete_all">Delete All</string>
    <string name="sort">Sort</string>
    <string name="settings">Settings</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="created_by_riski_ilyas">Created By Riski Ilyas\nwww.riskiilyas.com</string>
    <string name="languange">Languange</string>
    <string name="logout">Logout</string>
    <string name="contact_developer">Contact Developer</string>
    <string name="must_be_at_least_6_characters">Password must be at least 8 characters</string>
</resources>